--- a/src/views/about.css
+++ b/src/views/about.css
@@ -21,7 +21,7 @@
     }
     .img{
         border-radius: 20px 0;
-        margin: 0 40px;
+        margin: 10px 40px;
         mask-image: linear-gradient(
             #141D22 70%,
             transparent
@@ -30,17 +30,20 @@
 }
 @media (min-width: 430px){
     .about{
-        flex-direction: row;
+        flex-direction: row-reverse;
+        justify-content: center;
         height: 100vh;
         .body{
-            width: 50%;
-            margin: 30px;
+            width: 40%;
+            margin: 10px;
         }
         .img{
-            width: 400px;
+            width: 450px;
             height: 400px;
+            margin: 10px;
         }
         .title{
+            padding: 5px 0;
             font-size: 47px;
             text-align: start;
         }
